kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fitverse-backend
spec:
  selector:
    app: fitverse-backend
  ports:
  - protocol: TCP
    port: 4001
    targetPort: 4001
  type: ClusterIP
