kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fitverse-frontend
spec:
  selector:
    app: fitverse-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
